# Lerobot-Jaka

./: .gitignore  README.md  act_model.py  data_analyze.py  dataset_merge.py  homing_offset.json  homing_offset_so101.json  motor_calibration.py  motor_demo.py  record.py  test_camera.py  test_gripper.py  test_motor.py  test_teleop.py  verify_transform.py
README/: README.html  README.md
lerobot_robot_jaka/: pyproject.toml
lerobot_robot_jaka/lerobot_robot_jaka/: __init__.py  config_jaka.py  jaka_robot.py
lerobot_teleoperator_jaka_teleop/: pyproject.toml
lerobot_teleoperator_jaka_teleop/lerobot_teleoperator_jaka_teleop/: __init__.py  config_jaka_teleop.py  jaka_teleop.py
